# ps2stuff

./: .gitignore  CMAKE_BUILD.md  CMakeLists.txt
.github/workflows/: compilation.yml
include/ps2s/: displayenv.h  drawenv.h  gsmem.h  texture.h
src/: displayenv.cpp  gs.cpp  gsmem.cpp  texture.cpp
tests/: CMakeLists.txt
